--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,4 +4,12 @@
 
 .path {
   stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+  animation: dash 5s linear forwards;
+}
+
+@keyframes dash {
+  to {
+    stroke-dashoffset: 0;
+  }
 }
